--- a/index2.html
+++ b/index2.html
@@ -6,70 +6,245 @@
   <title>Mis Boletos • Graduación 2025</title>
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon-192.png">
-  <meta name="theme-color" content="#c41b2a">
+  <meta name="theme-color" content="#001f3f">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
   <style>
     :root {
-      --red-dark: #8B0000;
-      --red-main: #c41b2a;
-      --gold: #FFD700;
-      --green: #10b981;
-      --gray: #f1f5f9;
+      --azul-univer: #001f3f;     /* Azul marino del logo */
+      --azul-claro: #003366;
+      --blanco: #ffffff;
+      --negro: #000000;
+      --gris-claro: #f8f9fa;
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(-45deg, #667eea, #764ba2, #f093fb, #f5576c);
+      background: linear-gradient(-45deg, #001f3f, #003366, #002244, #001122);
       background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
+      animation: gradientBG 20s ease infinite;
       min-height: 100vh;
       padding: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
+      color: var(--blanco);
     }
-    @keyframes gradientBG { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
+    @keyframes gradientBG { 
+      0% { background-position: 0% 50%; } 
+      50% { background-position: 100% 50%; } 
+      100% { background-position: 0% 50%; } 
+    }
 
-    .container { max-width: 500px; width: 100%; background: rgba(255,255,255,0.15); backdrop-filter: blur(20px); border-radius: 28px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.4); }
-    .header { background: linear-gradient(135deg, #6366f1, #ec4899); color: white; text-align: center; padding: 40px 20px; }
-    .header h1 { font-size: clamp(28px, 6vw, 36px); font-weight: 700; margin-bottom: 8px; }
-    .content { padding: 40px 30px; background: rgba(255,255,255,0.97); color: #1e1b4b; }
-    .profile { background: var(--gray); padding: 20px; border-radius: 16px; text-align: center; margin-bottom: 25px; box-shadow: 0 8px 25px rgba(0,0,0,0.1); }
-    .profile h3 { color: var(--red-main); font-size: 24px; margin-bottom: 10px; }
-    .inventory { display: flex; justify-content: space-around; margin-bottom: 30px; text-align: center; }
-    .inventory div { background: #f1f5f9; padding: 16px; border-radius: 14px; width: 48%; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    .inventory span { font-size: 26px; font-weight: bold; color: #6366f1; }
-    .option { background: white; padding: 25px; border-radius: 16px; margin: 20px 0; box-shadow: 0 8px 25px rgba(0,0,0,0.12); transition: transform 0.3s; }
+    .container { 
+      max-width: 500px; 
+      width: 100%; 
+      background: rgba(255,255,255,0.12); 
+      backdrop-filter: blur(20px); 
+      border-radius: 28px; 
+      overflow: hidden; 
+      box-shadow: 0 20px 60px rgba(0,0,0,0.6); 
+    }
+
+    .header { 
+      background: var(--azul-univer); 
+      color: white; 
+      text-align: center; 
+      padding: 30px 20px 40px; 
+      position: relative;
+    }
+    .header .logo {
+      width: 110px;
+      margin-bottom: 15px;
+    }
+    .header h1 { 
+      font-size: clamp(28px, 6vw, 38px); 
+      font-weight: 700; 
+      margin-bottom: 8px; 
+      color: white;
+    }
+
+    .content { 
+      padding: 40px 30px; 
+      background: rgba(255,255,255,0.98); 
+      color: var(--azul-univer); 
+      border-radius: 0 0 28px 28px;
+    }
+
+    .profile { 
+      background: var(--gris-claro); 
+      padding: 20px; 
+      border-radius: 16px; 
+      text-align: center; 
+      margin-bottom: 25px; 
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1); 
+    }
+    .profile h3 { 
+      color: var(--azul-univer); 
+      font-size: 26px; 
+      margin-bottom: 8px; 
+    }
+
+    .inventory { 
+      display: flex; 
+      justify-content: space-around; 
+      margin-bottom: 30px; 
+      text-align: center; 
+    }
+    .inventory div { 
+      background: white; 
+      padding: 16px; 
+      border-radius: 14px; 
+      width: 48%; 
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1); 
+    }
+    .inventory span { 
+      font-size: 28px; 
+      font-weight: bold; 
+      color: var(--azul-univer); 
+    }
+
+    .option { 
+      background: white; 
+      padding: 25px; 
+      border-radius: 16px; 
+      margin: 20px 0; 
+      box-shadow: 0 8px 25px rgba(0,0,0,0.12); 
+      transition: transform 0.3s; 
+    }
     .option:hover { transform: translateY(-6px); }
-    button { width: 100%; padding: 16px; background: linear-gradient(90deg, #6366f1, #ec4899); color: white; border: none; border-radius: 12px; font-size: 18px; font-weight: 600; cursor: pointer; margin-top: 15px; transition: all 0.4s; }
-    button:hover { transform: translateY(-4px); box-shadow: 0 15px 30px rgba(99,102,241,0.4); }
-    button.delete { background: #ef4444; }
-    button.ticket { background: #10b981; }
-    .message { margin-top: 20px; padding: 15px; border-radius: 12px; text-align: center; font-weight: 600; display: none; }
-    .message.success { background: #d4edda; color: #10b981; }
-    .message.error { background: #f8d7da; color: #ef4444; }
+
+    button { 
+      width: 100%; 
+      padding: 16px; 
+      background: var(--azul-univer); 
+      color: white; 
+      border: none; 
+      border-radius: 12px; 
+      font-size: 18px; 
+      font-weight: 600; 
+      cursor: pointer; 
+      margin-top: 15px; 
+      transition: all 0.4s; 
+    }
+    button:hover { 
+      background: #002244; 
+      transform: translateY(-4px); 
+      box-shadow: 0 15px 30px rgba(0,31,63,0.4); 
+    }
+    button.delete { background: #dc3545; }
+    button.ticket { background: #001f3f; }
 
     select {
-      width: 48%; padding: 14px; margin: 8px 1%; border-radius: 12px; border: 2px solid #ddd; font-size: 16px; background: white;
+      width: 48%; 
+      padding: 14px; 
+      margin: 8px 1%; 
+      border-radius: 12px; 
+      border: 2px solid #ddd; 
+      font-size: 16px; 
+      background: white;
     }
-    #individualTotal { text-align: right; font-size: 24px; font-weight: bold; color: #f59e0b; margin: 20px 0; }
+    #individualTotal { 
+      text-align: right; 
+      font-size: 26px; 
+      font-weight: bold; 
+      color: var(--azul-univer); 
+      margin: 20px 0; 
+    }
 
-    #ticket { display: none; margin: 30px auto; width: 380px; background: linear-gradient(145deg, #8B0000, #c41b2a); color: white; border-radius: 24px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.6); font-family: 'Bebas Neue', sans-serif; text-align: center; }
-    .ticket-title { background: rgba(0,0,0,0.5); padding: 18px; font-size: 32px; color: #ff6b6b; }
-    .qr-container { background: white; margin: 25px auto; padding: 20px; width: 220px; height: 220px; border-radius: 18px; }
-    #qrCode { width: 180px; height: 180px; margin: 0 auto; }
-    .ticket-code { font-size: 36px; color: var(--gold); letter-spacing: 6px; margin: 20px 0; }
-    .info-row { display: flex; justify-content: space-between; padding: 8px 30px; border-bottom: 1px dashed rgba(255,255,255,0.4); font-size: 17px; }
-    .footer-note { background: rgba(0,0,0,0.4); padding: 18px; font-size: 15px; margin-top: 20px; border-top: 2px dashed rgba(255,255,255,0.3); }
+    .message { 
+      margin-top: 20px; 
+      padding: 15px; 
+      border-radius: 12px; 
+      text-align: center; 
+      font-weight: 600; 
+      display: none; 
+    }
+    .message.success { background: #d4edda; color: #155724; }
+    .message.error { background: #f8d7da; color: #721c24; }
+
+    /* TICKET */
+    #ticket { 
+      display: none; 
+      margin: 30px auto; 
+      width: 380px; 
+      background: white; 
+      color: var(--azul-univer); 
+      border-radius: 24px; 
+      overflow: hidden; 
+      box-shadow: 0 20px 50px rgba(0,0,0,0.6); 
+      font-family: 'Bebas Neue', sans-serif; 
+      text-align: center; 
+      position: relative;
+    }
+    .ticket-header {
+      background: var(--azul-univer);
+      padding: 20px;
+      color: white;
+    }
+    .ticket-header img {
+      width: 90px;
+      margin-bottom: 10px;
+    }
+    .ticket-title { 
+      font-size: 34px; 
+      color: white;
+    }
+    .qr-container { 
+      background: white; 
+      margin: 25px auto; 
+      padding: 20px; 
+      width: 220px; 
+      height: 220px; 
+      border-radius: 18px; 
+      border: 3px solid var(--azul-univer);
+    }
+    .ticket-code { 
+      font-size: 36px; 
+      color: var(--azul-univer); 
+      letter-spacing: 6px; 
+      margin: 20px 0; 
+      font-weight: bold;
+    }
+    .info-row { 
+      display: flex; 
+      justify-content: space-between; 
+      padding: 10px 30px; 
+      border-bottom: 1px dashed #ccc; 
+      font-size: 17px; 
+    }
+    .footer-note { 
+      background: var(--azul-univer); 
+      color: white; 
+      padding: 20px; 
+      font-size: 15px; 
+      margin-top: 20px;
+    }
 
     .download-btn, #backButton {
-      display: block; margin: 20px auto; padding: 16px 40px; background: var(--gold); color: black; border: none; border-radius: 50px; font-weight: bold; font-size: 18px; cursor: pointer; width: fit-content;
+      display: block; 
+      margin: 20px auto; 
+      padding: 16px 40px; 
+      background: var(--azul-univer); 
+      color: white; 
+      border: none; 
+      border-radius: 50px; 
+      font-weight: bold; 
+      font-size: 18px; 
+      cursor: pointer; 
+      width: fit-content;
     }
-    #backButton { background: white; color: #c41b2a; border: 2px solid #c41b2a; }
-    #backButton:hover { background: #c41b2a; color: white; }
+    #backButton { 
+      background: white; 
+      color: var(--azul-univer); 
+      border: 2px solid var(--azul-univer); 
+    }
+    #backButton:hover { 
+      background: var(--azul-univer); 
+      color: white; 
+    }
 
     @media (max-width: 480px) {
       select { width: 100%; margin: 10px 0; }
@@ -82,7 +257,9 @@
 <body>
 
   <div class="container">
+    <!-- HEADER CON LOGO -->
     <div class="header">
+      <img src="https://i.ibb.co/5Kp0sG6/univer-milenium-logo.png" alt="Universidad UNIVER MILENIUM" class="logo">
       <h1>Graduación 2025</h1>
       <p id="welcome">Cargando...</p>
     </div>
@@ -99,7 +276,7 @@
       </div>
 
       <div id="myPurchases">
-        <div style="background:#fef3cd;padding:20px;border-radius:12px;text-align:center;">
+        <div style="background:#e9ecef;padding:20px;border-radius:12px;text-align:center;">
           <p>Cargando tus compras...</p>
         </div>
       </div>
@@ -147,8 +324,12 @@
       <div id="message" class="message"></div>
     </div>
 
+    <!-- TICKET CON LOGO -->
     <div id="ticket">
-      <div class="ticket-title">GRADUACIÓN 2025</div>
+      <div class="ticket-header">
+        <img src="https://i.ibb.co/5Kp0sG6/univer-milenium-logo.png" alt="UNIVER MILENIUM" style="width:90px;">
+        <div class="ticket-title">GRADUACIÓN 2025</div>
+      </div>
       <div class="qr-container"><canvas id="qrCode"></canvas></div>
       <div class="ticket-code" id="ticketCode">XXXXXXXXX</div>
       <div class="ticket-info">
@@ -167,6 +348,7 @@
     </div>
   </div>
 
+  <!-- TODO EL JAVASCRIPT SIN CAMBIOS -->
   <script>
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
@@ -182,7 +364,7 @@
 
     const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/";
     const INVENTORY_URL = DB_URL + "inventory.json";
-    const PURCHASES_URL = DB_URL + `users/${userId}/purchases.json`; // Esta es la clave
+    const PURCHASES_URL = DB_URL + `users/${userId}/purchases.json`;
 
     let compras = [];
     let totalCena = 0;
@@ -211,7 +393,6 @@
         document.getElementById('dinnerAvailable').textContent = inventory.dinner || 200;
         document.getElementById('ceremonyAvailable').textContent = inventory.ceremony || 200;
 
-        // Limpiar variables
         compras = [];
         totalCena = 0;
         totalCeremonia = 0;
@@ -223,8 +404,8 @@
 
           document.getElementById('myPurchases').innerHTML = `
             <div style="background:#d4edda;padding:20px;border-radius:12px;text-align:center;">
-              <h3 style="color:#10b981;">¡Ya tienes boletos!</h3>
-              <p><strong>${totalCena} Cena + ${totalCeremonia} Ceremonia</strong></p>
+              <h3 style="color:#155724;">¡Ya tienes boletos!</h3>
+              <p><strong>\( {totalCena} Cena + \){totalCeremonia} Ceremonia</strong></p>
             </div>
           `;
 
@@ -232,7 +413,7 @@
           document.getElementById('deleteLast').style.display = 'block';
         } else {
           document.getElementById('myPurchases').innerHTML = `
-            <div style="background:#fef3cd;padding:20px;border-radius:12px;text-align:center;">
+            <div style="background:#e9ecef;padding:20px;border-radius:12px;text-align:center;">
               <p>Aún no has comprado boletos</p>
             </div>
           `;
@@ -250,7 +431,6 @@
         const codigo = Math.random().toString(36).substr(2, 9).toUpperCase();
         const compra = { cena, ceremonia, total, codigo, fecha: new Date().toISOString() };
 
-        // Guardar compra
         const res = await fetch(PURCHASES_URL, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
@@ -259,7 +439,6 @@
 
         if (!res.ok) throw new Error("Error al guardar compra");
 
-        // Actualizar inventario
         const inv = await (await fetch(INVENTORY_URL)).json() || {dinner: 200, ceremony: 200};
         await fetch(INVENTORY_URL, {
           method: 'PATCH',
@@ -269,7 +448,6 @@
           })
         });
 
-        // Recargar todo
         await loadData();
         showMessage('¡Compra realizada con éxito!', 'success');
 
@@ -305,7 +483,7 @@
     document.getElementById('deleteLast').onclick = async () => {
       if (!confirm('¿Eliminar última compra?')) return;
       const ultima = compras[compras.length - 1];
-      await fetch(DB_URL + `users/${userId}/purchases/${ultima.id}.json`, { method: 'DELETE' });
+      await fetch(DB_URL + `users/\( {userId}/purchases/ \){ultima.id}.json`, { method: 'DELETE' });
       const inv = await (await fetch(INVENTORY_URL)).json();
       await fetch(INVENTORY_URL, { method: 'PATCH', body: JSON.stringify({
         dinner: inv.dinner + ultima.cena,
@@ -323,7 +501,7 @@
       document.getElementById('ticketMatricula').textContent = userMatricula;
       document.getElementById('ticketFecha').textContent = fecha;
       document.getElementById('ticketHora').textContent = hora;
-      document.getElementById('ticketBoletos').textContent = `${totalCena} Cena + ${totalCeremonia} Ceremonia`;
+      document.getElementById('ticketBoletos').textContent = `\( {totalCena} Cena + \){totalCeremonia} Ceremonia`;
       document.getElementById('ticketCode').textContent = compra.codigo;
 
       document.getElementById('mainContent').style.display = 'none';
@@ -331,7 +509,7 @@
       document.getElementById('downloadTicket').style.display = 'block';
       document.getElementById('backButton').style.display = 'block';
 
-      const url = `https://ax2004-2003.github.io/Boletos/verificar.html?mat=${userMatricula}&code=${compra.codigo}`;
+      const url = `https://ax2004-2003.github.io/Boletos/verificar.html?mat=\( {userMatricula}&code= \){compra.codigo}`;
       QRCode.toCanvas(document.getElementById('qrCode'), url, { width: 180 });
     }
 
@@ -352,7 +530,6 @@
       setTimeout(() => msg.style.display = 'none', 4000);
     }
 
-    // INICIALIZACIÓN
     calculateTotal();
     loadData();
 
