--- a/index2.html
+++ b/index2.html
@@ -96,7 +96,6 @@
       box-shadow: 0 20px 50px rgba(0,0,0,0.6);
       font-family: 'Bebas Neue', sans-serif;
       text-align: center;
-      position: relative;
     }
     .ticket-title {
       background: rgba(0,0,0,0.5);
@@ -132,35 +131,9 @@
     }
     #backButton { background: white; color: var(--blue-main); border: 2px solid var(--blue-main); }
     #backButton:hover { background: var(--blue-main); color: white; }
-
-    /* Estilo para el ticket descargable */
-    #ticket-to-download {
-      display: none;
-      width: 380px;
-      background: linear-gradient(145deg, var(--blue-dark), var(--blue-main));
-      color: white;
-      border-radius: 24px;
-      overflow: hidden;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.6);
-      font-family: 'Bebas Neue', sans-serif;
-      text-align: center;
-      position: relative;
-      padding-bottom: 20px;
-    }
-    #ticket-to-download::after {
-      content: "";
-      position: absolute;
-      bottom: 70px;
-      left: 20px;
-      right: 20px;
-      height: 20px;
-      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="20" viewBox="0 0 100 20"><path d="M0,10 Q25,0 50,10 T100,10 L100,20 L0,20 Z" fill="%23ffffff" /></svg>');
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
-    }
     @media (max-width: 480px) {
       select { width: 100%; margin: 10px 0; }
-      #ticket, #ticket-to-download { width: 95%; }
+      #ticket { width: 95%; }
       .qr-container { width: 200px; height: 200px; }
       #qrCode { width: 160px; height: 160px; }
     }
@@ -174,6 +147,7 @@
       <p id="welcome">Cargando...</p>
     </div>
     <div class="content" id="mainContent">
+      <!-- El resto del contenido HTML sigue igual -->
       <div class="profile">
         <h3 id="userName">Axel</h3>
         <p>Mis boletos comprados</p>
@@ -244,23 +218,9 @@
       <button class="download-btn" id="downloadTicket">Descargar Ticket</button>
       <button id="backButton">Regresar</button>
     </div>
-    <div id="ticket-to-download">
-      <div class="ticket-title">
-        <img src="https://mistralaiblackforestprod.blob.core.windows.net/images/blackforest/2e61/1938/-b56/9-4269-892b-902473a48c31/image.jpg?se=2025-12-10T16%3A32%3A54Z&sp=r&sv=2025-01-05&sr=b&sig=fcyHAsqkTsb9UNy4VisNFl96ssxVxRzJj1UCUY0SbNw%3D" alt="Universidad UNIVER MILENIUM Logo">
-        GRADUACIÓN 2025
-      </div>
-      <div class="qr-container"><canvas id="qrCodeToDownload"></canvas></div>
-      <div class="ticket-code" id="ticketCodeToDownload">XXXXXXXXX</div>
-      <div class="ticket-info">
-        <div class="info-row"><span class="label">ALUMNO</span><span class="value" id="ticketNombreToDownload"></span></div>
-        <div class="info-row"><span class="label">MATRÍCULA</span><span class="value" id="ticketMatriculaToDownload"></span></div>
-        <div class="info-row"><span class="label">FECHA COMPRA</span><span class="value" id="ticketFechaToDownload"></span></div>
-        <div class="info-row"><span class="label">HORA COMPRA</span><span class="value" id="ticketHoraToDownload"></span></div>
-        <div class="info-row"><span class="label">BOLETOS TOTALES</span><span class="value" id="ticketBoletosToDownload"></span></div>
-      </div>
-    </div>
   </div>
   <script>
+    // El script JavaScript sigue exactamente igual
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
     const userId = localStorage.getItem('currentUserId');
@@ -392,24 +352,14 @@
       document.getElementById('ticket').style.display = 'block';
       document.getElementById('downloadTicket').style.display = 'block';
       document.getElementById('backButton').style.display = 'block';
-
-      // Copiar datos al ticket descargable
-      document.getElementById('ticketNombreToDownload').textContent = userNombre;
-      document.getElementById('ticketMatriculaToDownload').textContent = userMatricula;
-      document.getElementById('ticketFechaToDownload').textContent = fecha;
-      document.getElementById('ticketHoraToDownload').textContent = hora;
-      document.getElementById('ticketBoletosToDownload').textContent = `${totalCena} Cena + ${totalCeremonia} Ceremonia`;
-      document.getElementById('ticketCodeToDownload').textContent = compra.codigo;
-      QRCode.toCanvas(document.getElementById('qrCodeToDownload'), `https://ax2004-2003.github.io/Boletos/verificar.html?mat=${userMatricula}&code=${compra.codigo}`, { width: 180 });
-
       const url = `https://ax2004-2003.github.io/Boletos/verificar.html?mat=${userMatricula}&code=${compra.codigo}`;
       QRCode.toCanvas(document.getElementById('qrCode'), url, { width: 180 });
     }
     document.getElementById('downloadTicket').onclick = () => {
-      html2canvas(document.getElementById('ticket-to-download'), { scale: 2 }).then(canvas => {
+      html2canvas(document.getElementById('ticket'), { scale: 2 }).then(c => {
         const a = document.createElement('a');
         a.download = `Ticket_${userMatricula}.png`;
-        a.href = canvas.toDataURL();
+        a.href = c.toDataURL();
         a.click();
       });
     };
