--- a/lista-alumnos.html
+++ b/lista-alumnos.html
@@ -4,33 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Panel Admin • Graduación 2025</title>
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  
+
   <style>
     :root {
-      --primary: #6366f1;
-      --primary-dark: #4f46e5;
-      --secondary: #ec4899;
-      --accent: #f59e0b;
+      --primary: #1e3a8a;
+      --primary-dark: #1e40af;
+      --secondary: #3b82f6;
+      --accent: #93c5fd;
       --success: #10b981;
       --error: #ef4444;
       --text: #1f2937;
       --light: #f8fafc;
     }
-
     * { margin: 0; padding: 0; box-sizing: border-box; }
-
     html, body {
       height: 100%;
       width: 100%;
       overflow-x: hidden;
     }
-
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+      background: linear-gradient(-45deg, #bfdbfe, #60a5fa, #3b82f6, #1e40af);
       background-size: 400% 400%;
       animation: gradientBG 15s ease infinite;
       min-height: 100vh;
@@ -40,13 +36,11 @@
       padding: 20px 15px;
       position: relative;
     }
-
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-
     .container {
       background: rgba(255, 255, 255, 0.18);
       backdrop-filter: blur(20px);
@@ -62,44 +56,46 @@
       z-index: 10;
       animation: appear 1.2s ease-out;
     }
-
     @keyframes appear {
       from { opacity: 0; transform: scale(0.85) translateY(60px); }
       to { opacity: 1; transform: scale(1) translateY(0); }
     }
-
     .header {
       background: linear-gradient(135deg, var(--primary), var(--secondary));
-      padding: 40px 30px;
+      padding: 20px;
       text-align: center;
       color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
-
+    .header img {
+      width: 80px;
+      height: auto;
+      margin-bottom: 10px;
+    }
     .header h1 {
       font-size: clamp(28px, 6vw, 38px);
       font-weight: 700;
       margin-bottom: 8px;
       text-shadow: 0 4px 15px rgba(0,0,0,0.4);
     }
-
     .header p {
       font-size: clamp(14px, 3.5vw, 17px);
       opacity: 0.95;
       font-weight: 300;
     }
-
     .content {
       padding: 40px;
       background: rgba(255,255,255,0.97);
       max-height: 70vh;
       overflow-y: auto;
     }
-
     .menu {
       text-align: center;
       margin-bottom: 30px;
     }
-
     .menu label {
       display: block;
       margin-bottom: 10px;
@@ -107,7 +103,6 @@
       font-weight: 600;
       font-size: 18px;
     }
-
     .menu select {
       width: 100%;
       max-width: 400px;
@@ -119,14 +114,12 @@
       transition: all 0.4s ease;
       box-shadow: 0 4px 15px rgba(0,0,0,0.06);
     }
-
     .menu select:focus {
       outline: none;
       border-color: var(--primary);
-      box-shadow: 0 0 0 5px rgba(99, 102, 241, 0.25);
+      box-shadow: 0 0 0 5px rgba(30, 58, 138, 0.25);
       transform: translateY(-3px);
     }
-
     .stats {
       background: linear-gradient(90deg, var(--primary), var(--secondary));
       color: white;
@@ -137,7 +130,6 @@
       font-size: 18px;
       font-weight: 600;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
@@ -147,13 +139,11 @@
       overflow: hidden;
       box-shadow: 0 8px 25px rgba(0,0,0,0.1);
     }
-
     th, td {
       padding: 16px;
       text-align: left;
       border-bottom: 1px solid #e2e8f0;
     }
-
     th {
       background: linear-gradient(90deg, var(--primary), var(--secondary));
       color: white;
@@ -162,30 +152,25 @@
       font-size: 14px;
       letter-spacing: 0.5px;
     }
-
     tr:hover {
       background: #f8fafc;
     }
-
     .total-boletos {
       font-weight: bold;
       color: var(--accent);
     }
-
     .no-data {
       text-align: center;
       padding: 40px;
       color: #666;
       font-style: italic;
     }
-
     .loader {
       text-align: center;
       padding: 40px;
       font-size: 18px;
       color: var(--primary);
     }
-
     .loader::after {
       content: '';
       width: 32px;
@@ -197,9 +182,7 @@
       animation: spin 0.8s linear infinite;
       margin-left: 10px;
     }
-
     @keyframes spin { to { transform: rotate(360deg); } }
-
     footer {
       text-align: center;
       padding: 25px;
@@ -212,43 +195,38 @@
   </style>
 </head>
 <body>
-
   <div class="container">
     <div class="header">
+      <img src="uni.png" alt="Universidad UNIVER MILENIUM Logo">
       <h1>Panel Admin</h1>
       <p>Estadísticas por Carrera • Graduación 2025</p>
     </div>
-
     <div class="content">
       <div class="menu">
         <label for="carreraSelect">Selecciona una carrera:</label>
         <select id="carreraSelect">
           <option value="">-- Elige una carrera --</option>
-         <option value="Ingeniería en Sistemas">Ingeniería en Sistemas</option>
-            <option value="Ingeniería Industrial">Pedagogía</option>
-            <option value="Ingeniería Civil">Administración de Empresas</option>
-            <option value="Arquitectura">Comunicación</option>
-            <option value="Derecho">Derecho</option>
-            <option value="Medicina">Comercio Internacional y Aduanas</option>
-            <option value="Psicología">Psicología</option>
-            <option value="Administración">Mercadoctenia</option>
-            <option value="Contaduría">Contaduría</option>
-            <option value="Otra">Otra</option>
+          <option value="Ingeniería en Sistemas">Ingeniería en Sistemas</option>
+          <option value="Pedagogía">Pedagogía</option>
+          <option value="Administración de Empresas">Administración de Empresas</option>
+          <option value="Comunicación">Comunicación</option>
+          <option value="Derecho">Derecho</option>
+          <option value="Comercio Internacional y Aduanas">Comercio Internacional y Aduanas</option>
+          <option value="Psicología">Psicología</option>
+          <option value="Mercadoctenia">Mercadotecnia</option>
+          <option value="Contaduría">Contaduría</option>
+          <option value="Otra">Otra</option>
         </select>
       </div>
-
       <div id="stats" class="stats" style="display: none;">
         <p>Inscritos en <span id="selectedCarrera"></span>: <span id="totalInscritos"></span> estudiantes</p>
       </div>
-
       <div id="tableContainer">
         <!-- La tabla se genera dinámicamente aquí -->
       </div>
     </div>
-
     <footer>© 2025 Graduación • Panel Administrativo</footer>
   </div>
-
   <script>
     const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/users.json";
     const carreraSelect = document.getElementById("carreraSelect");
@@ -275,19 +253,15 @@
         statsDiv.style.display = 'none';
         return;
       }
-
       const usersInCarrera = Object.values(allUsers).filter(user => user.carrera === carrera);
       const totalInscritos = usersInCarrera.length;
-
       document.getElementById("selectedCarrera").textContent = carrera;
       document.getElementById("totalInscritos").textContent = totalInscritos;
       statsDiv.style.display = 'block';
-
       if (totalInscritos === 0) {
         tableContainer.innerHTML = '<div class="no-data">No hay estudiantes inscritos en esta carrera.</div>';
         return;
       }
-
       let totalBoletosGlobal = 0;
       let tableHTML = `
         <table>
@@ -301,7 +275,6 @@
           </thead>
           <tbody>
       `;
-
       usersInCarrera.forEach(user => {
         let totalBoletos = 0;
         if (user.purchases) {
@@ -310,7 +283,6 @@
           });
         }
         totalBoletosGlobal += totalBoletos;
-
         tableHTML += `
           <tr>
             <td>${user.nombre || 'N/A'}</td>
@@ -320,7 +292,6 @@
           </tr>
         `;
       });
-
       tableHTML += `
           </tbody>
         </table>
@@ -328,21 +299,19 @@
           Total de boletos en esta carrera: ${totalBoletosGlobal}
         </div>
       `;
-
       tableContainer.innerHTML = tableHTML;
     }
 
     // Event listener para el select
     carreraSelect.addEventListener("change", (e) => {
       tableContainer.innerHTML = '<div class="loader">Cargando datos...</div>';
-      setTimeout(() => showDataByCarrera(e.target.value), 500); // Simular carga
+      setTimeout(() => showDataByCarrera(e.target.value), 500);
     });
 
     // Inicializar
     loadUsers().then(() => {
-      showDataByCarrera(''); // Mostrar mensaje inicial
+      showDataByCarrera('');
     });
   </script>
 </body>
 </html>
-
