--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
+  <!-- PARTICULAS DE FONDO -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <style>
+    /* Contenedor de partículas detrás de todo */
+    #particles-js {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      pointer-events: none;
+    }
     :root {
       --blue-dark: #1e3a8a;
       --blue-main: #3b82f6;
@@ -29,9 +41,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      position: relative; /* para que las partículas queden detrás */
+      overflow: hidden;
     }
-    @keyframes gradientBG { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
-    .container { max-width: 500px; width: 100%; background: rgba(255,255,255,0.15); backdrop-filter: blur(20px); border-radius: 28px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.4); }
+    @keyframes gradientBG { 
+      0% { background-position: 0% 50%; } 
+      50% { background-position: 100% 50%; } 
+      100% { background-position: 0% 50%; } 
+    }
+    .container { max-width: 500px; width: 100%; background: rgba(255,255,255,0.15); backdrop-filter: blur(20px); border-radius: 28px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.4); position: relative; z-index: 1; }
     .header {
       background: linear-gradient(135deg, #1e3a8a, #3b82f6);
       color: white;
@@ -140,6 +158,10 @@
   </style>
 </head>
 <body>
+
+  <!-- PARTÍCULAS DE FONDO -->
+  <div id="particles-js"></div>
+
   <div class="container">
     <div class="header">
       <img src="uni.png" alt="Universidad UNIVER MILENIUM Logo">
@@ -147,7 +169,6 @@
       <p id="welcome">Cargando...</p>
     </div>
     <div class="content" id="mainContent">
-      <!-- El resto del contenido HTML sigue igual -->
       <div class="profile">
         <h3 id="userName">Axel</h3>
         <p>Mis boletos comprados</p>
@@ -219,8 +240,41 @@
       <button id="backButton">Regresar</button>
     </div>
   </div>
+
   <script>
-    // El script Rescata los valores de Firebase
+    // ==== INICIO DE PARTÍCULAS ====
+    particlesJS("particles-js", {
+      "particles": {
+        "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
+        "color": { "value": ["#ffffff", "#a5b4fc", "#60a5fa"] },
+        "shape": { "type": "circle" },
+        "opacity": { "value": 0.6, "random": true, "anim": { "enable": true, "speed": 1, "opacity_min": 0.2 } },
+        "size": { "value": 4, "random": true, "anim": { "enable": true, "speed": 2, "size_min": 0.1 } },
+        "line_linked": { "enable": false },
+        "move": {
+          "enable": true,
+          "speed": 1.5,
+          "direction": "none",
+          "random": true,
+          "straight": false,
+          "out_mode": "out",
+          "bounce": false,
+          "attract": { "enable": false }
+        }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": { "enable": true, "mode": "repulse" },
+          "onclick": { "enable": false },
+          "resize": true
+        }
+      },
+      "retina_detect": true
+    });
+    // ==== FIN DE PARTÍCULAS ====
+
+    // El resto de tu script original (sin tocar nada)
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
     const userId = localStorage.getItem('currentUserId');
@@ -361,7 +415,7 @@
         a.download = `Ticket_${userMatricula}.png`;
         a.href = c.toDataURL();
         a.click();
-      }); 
+      });
     };
     function showMessage(text, type = 'error') {
       const msg = document.getElementById('message');
